Mail Subscribe Business Katmani Yazildi

--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Concrete\BlogManager.cs" />
     <Compile Include="Concrete\CategoryManager.cs" />
+    <Compile Include="Concrete\SubscribeMailManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
