--- a/Mvc5BlogProject/Mvc5BlogProject.csproj
+++ b/Mvc5BlogProject/Mvc5BlogProject.csproj
@@ -2462,6 +2462,7 @@
     <Content Include="Views\Blog\AddNewBlog.cshtml" />
     <Content Include="Views\Blog\UpdateBlog.cshtml" />
     <Content Include="Views\Blog\GetCommentByBlog.cshtml" />
+    <Content Include="Views\Author\AuthorList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
