Yeni Yazar Ekleme Islemi Yapildi

--- a/Mvc5BlogProject/Mvc5BlogProject.csproj
+++ b/Mvc5BlogProject/Mvc5BlogProject.csproj
@@ -2463,6 +2463,7 @@
     <Content Include="Views\Blog\UpdateBlog.cshtml" />
     <Content Include="Views\Blog\GetCommentByBlog.cshtml" />
     <Content Include="Views\Author\AuthorList.cshtml" />
+    <Content Include="Views\Author\AddAuthor.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
