Yazar Guncelleme Sayfasi Olusturuldu

--- a/Mvc5BlogProject/Mvc5BlogProject.csproj
+++ b/Mvc5BlogProject/Mvc5BlogProject.csproj
@@ -2464,6 +2464,7 @@
     <Content Include="Views\Blog\GetCommentByBlog.cshtml" />
     <Content Include="Views\Author\AuthorList.cshtml" />
     <Content Include="Views\Author\AddAuthor.cshtml" />
+    <Content Include="Views\Author\AuthorEdit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
