--- a/Mvc5BlogProject/Mvc5BlogProject.csproj
+++ b/Mvc5BlogProject/Mvc5BlogProject.csproj
@@ -2465,7 +2465,7 @@
     <Content Include="Views\Author\AuthorList.cshtml" />
     <Content Include="Views\Author\AddAuthor.cshtml" />
     <Content Include="Views\Author\AuthorEdit.cshtml" />
-    <Content Include="Views\Comment\AdminCommentList.cshtml" />
+    <Content Include="Views\Comment\AdminCommentListTrue.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
