Yorum Onaylama Islemi Tamamlandi

--- a/Mvc5BlogProject/Mvc5BlogProject.csproj
+++ b/Mvc5BlogProject/Mvc5BlogProject.csproj
@@ -2466,6 +2466,7 @@
     <Content Include="Views\Author\AddAuthor.cshtml" />
     <Content Include="Views\Author\AuthorEdit.cshtml" />
     <Content Include="Views\Comment\AdminCommentListTrue.cshtml" />
+    <Content Include="Views\Comment\AdminCommentListFalse.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
