--- a/Mvc5BlogProject/Mvc5BlogProject.csproj
+++ b/Mvc5BlogProject/Mvc5BlogProject.csproj
@@ -2467,6 +2467,7 @@
     <Content Include="Views\Author\AuthorEdit.cshtml" />
     <Content Include="Views\Comment\AdminCommentListTrue.cshtml" />
     <Content Include="Views\Comment\AdminCommentListFalse.cshtml" />
+    <Content Include="Views\Category\AdminCategoryList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
