--- a/Mvc5BlogProject/Mvc5BlogProject.csproj
+++ b/Mvc5BlogProject/Mvc5BlogProject.csproj
@@ -2468,6 +2468,7 @@
     <Content Include="Views\Comment\AdminCommentListTrue.cshtml" />
     <Content Include="Views\Comment\AdminCommentListFalse.cshtml" />
     <Content Include="Views\Category\AdminCategoryList.cshtml" />
+    <Content Include="Views\Blog\AdminBlogList2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
