Mesaj Detaylari Listeleme Islemi Yapildi

--- a/Mvc5BlogProject/Mvc5BlogProject.csproj
+++ b/Mvc5BlogProject/Mvc5BlogProject.csproj
@@ -2471,6 +2471,7 @@
     <Content Include="Views\Blog\AdminBlogList2.cshtml" />
     <Content Include="Views\About\UpdateAbout.cshtml" />
     <Content Include="Views\Contact\SendBox.cshtml" />
+    <Content Include="Views\Contact\MessageDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
