Yazar Login Formu Oluşturuldu

--- a/Mvc5BlogProject/Mvc5BlogProject.csproj
+++ b/Mvc5BlogProject/Mvc5BlogProject.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Controllers\CommentController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\SubscribeMailController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
@@ -1995,6 +1996,13 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="loginForm\Report-Login-Free\css\font-awesome.min.css" />
+    <Content Include="loginForm\Report-Login-Free\css\style.css" />
+    <Content Include="loginForm\Report-Login-Free\fonts\fontawesome-webfont.svg" />
+    <Content Include="loginForm\Report-Login-Free\images\1.png" />
+    <Content Include="loginForm\Report-Login-Free\images\undraw_Work_time_re_hdyv.svg" />
+    <Content Include="loginForm\Report-Login-Free\index.html" />
+    <Content Include="loginForm\Report-Login-Free\starter-license-W3Layouts.txt" />
     <Content Include="miniblog\miniblog\about.html" />
     <Content Include="miniblog\miniblog\category.html" />
     <Content Include="miniblog\miniblog\contact.html" />
@@ -2415,6 +2423,11 @@
     <Content Include="AdminLTE-3.0.4\plugins\sweetalert2-theme-bootstrap-4\bootstrap-4.scss" />
     <Content Include="AdminLTE-3.0.4\plugins\toastr\toastr.js.map" />
     <Content Include="AdminLTE-3.0.4\README.md" />
+    <Content Include="loginForm\Report-Login-Free\fonts\fontawesome-webfont.eot" />
+    <Content Include="loginForm\Report-Login-Free\fonts\fontawesome-webfont.ttf" />
+    <Content Include="loginForm\Report-Login-Free\fonts\fontawesome-webfont.woff" />
+    <Content Include="loginForm\Report-Login-Free\fonts\fontawesome-webfont.woff2" />
+    <Content Include="loginForm\Report-Login-Free\fonts\FontAwesome.otf" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -2481,6 +2494,7 @@
     <Content Include="Views\Chart\Chart2.cshtml" />
     <Content Include="Views\Shared\_AuthorLayout.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
+    <Content Include="Views\Login\AuthorLogin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
