--- a/Mvc5BlogProject/Web.config
+++ b/Mvc5BlogProject/Web.config
@@ -17,6 +17,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    <authentication mode="Forms">
+      <forms loginUrl="/Login/AuthorLogin"></forms>
+    </authentication>
   </system.web>
   <connectionStrings>
     <add name="BlogContext" connectionString="data source=LAPTOP-05OJ6C2N\SQLEXPRESS; initial catalog=BlogDb; integrated security=true;" providerName="System.Data.SqlClient" />
