--- a/Mvc5BlogProject/Web.config
+++ b/Mvc5BlogProject/Web.config
@@ -15,6 +15,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On">
+      <error statusCode="404" redirect="/Error/Page404"/>
+      <error statusCode="403" redirect="/Error/Page403"/>
+    </customErrors>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
     <authentication mode="Forms">
