--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -101,6 +101,14 @@
     <Compile Include="Migrations\202201121523579_migCategoryStatus.designer.cs">
       <DependentUpon>202201121523579_migCategoryStatus.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202201121731575_migBlogRaitingForComment.cs" />
+    <Compile Include="Migrations\202201121731575_migBlogRaitingForComment.designer.cs">
+      <DependentUpon>202201121731575_migBlogRaitingForComment.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202201121855448_migAdminRoleRefactor.cs" />
+    <Compile Include="Migrations\202201121855448_migAdminRoleRefactor.designer.cs">
+      <DependentUpon>202201121855448_migAdminRoleRefactor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -134,6 +142,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202201121523579_migCategoryStatus.resx">
       <DependentUpon>202201121523579_migCategoryStatus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202201121731575_migBlogRaitingForComment.resx">
+      <DependentUpon>202201121731575_migBlogRaitingForComment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202201121855448_migAdminRoleRefactor.resx">
+      <DependentUpon>202201121855448_migAdminRoleRefactor.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
