--- a/Mvc5BlogProject/Web.config
+++ b/Mvc5BlogProject/Web.config
@@ -24,6 +24,11 @@
     <authentication mode="Forms">
       <forms loginUrl="/Login/AuthorLogin"></forms>
     </authentication>
+    <roleManager enabled="true" defaultProvider="TestProvider">
+      <providers>
+        <add name="TestProvider" type=" Mvc5BlogProject.Roles.AdminRoleProvider"/>
+      </providers>
+    </roleManager>
   </system.web>
   <connectionStrings>
     <add name="BlogContext" connectionString="data source=LAPTOP-05OJ6C2N\SQLEXPRESS; initial catalog=BlogDb; integrated security=true;" providerName="System.Data.SqlClient" />
