--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Concrete\BlogContext.cs" />
     <Compile Include="Concrete\Repository.cs" />
     <Compile Include="EntityFramework\EfAuthorDal.cs" />
+    <Compile Include="EntityFramework\EfBlogDal.cs" />
     <Compile Include="EntityFramework\EfCategoryDal.cs" />
     <Compile Include="Migrations\202109171229564_migSubscribeMail.cs" />
     <Compile Include="Migrations\202109171229564_migSubscribeMail.designer.cs">
